Closed Bug 1180878 Opened 9 years ago Closed 9 years ago

[e10s] Can't Print to PDF if folder name contains spaces

Categories

(Toolkit :: Printing, defect)

Unspecified
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
e10s m8+ ---
firefox42 --- fixed

People

(Reporter: Felipe, Assigned: mconley)

Details

Attachments

(2 files)

Steps to reproduce:

- try to print a webpage
- on the Mac OS print dialog, select Print to PDF
- Choose a folder that has spaces in its name (note: just choosing the filename to contain spaces is not enough, the folder must have spaces)
- print

Results:
- the PDF will not be generated at the selected location, and a print job was actually sent to the actual printer's spool. (I don't know if it would actually end up printing it or not as my printer was turned off)


This message shows up in the console:
[Exception... "Component returned failure code: 0x80040154 (NS_ERROR_FACTORY_NOT_REGISTERED) [nsIPrintSettingsService.defaultPrinterName]"  nsresult: "0x80040154 (NS_ERROR_FACTORY_NOT_REGISTERED)"  location: "JS frame :: chrome://global/content/browser-content.js :: getPrintSettings :: line 428"  data: no]

and then a TypeError: printSettings is null in browser-content.js:503 @
"PSSVC.savePrintSettingsToPrefs(printSettings, true,
                                printSettings.kInitSaveAll);"
Assignee: nobody → mconley
Bug 1180878 - Do not re-escape NSPrintJobSavingURLs when deserializing in the content process. r?mstange

We assume that when an NSURL has been serialized to PrintData, that it has already
been percent encoded. This means that we don't need to re-percent encode it when
we deserialize.
Attachment #8637329 - Flags: review?(mstange)
Comment on attachment 8637329 [details]
MozReview Request: Bug 1180878 - Do not re-escape NSPrintJobSavingURLs when deserializing in the content process. r?mstange

https://reviewboard.mozilla.org/r/13839/#review12435

Ship It!
Attachment #8637329 - Flags: review?(mstange) → review+
url:        https://hg.mozilla.org/integration/mozilla-inbound/rev/ba86e48b63dc3f6f6fb28a132184dbea4748614f
changeset:  ba86e48b63dc3f6f6fb28a132184dbea4748614f
user:       Mike Conley <mconley@mozilla.com>
date:       Wed Jul 22 13:40:28 2015 -0400
description:
Bug 1180878 - Do not re-escape NSPrintJobSavingURLs when deserializing in the content process. r=mstange

We assume that when an NSURL has been serialized to PrintData, that it has already
been percent encoded. This means that we don't need to re-percent encode it when
we deserialize.
https://hg.mozilla.org/mozilla-central/rev/ba86e48b63dc
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: